tests/__snapshots__/api-toBeBigInt.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeBigInt: stderr 1`] = `
"Error: The source type is 'void'.

   7 |   expect(returnsBigInt()).type.toBeBigInt();
   8 | 
>  9 |   expect(returnsVoid()).type.toBeBigInt();
     |                              ^
  10 | });
  11 | 
  12 | test("is NOT bigint?", () => {

       at ./__typetests__/toBeBigInt.tst.ts:9:30 ❭ is bigint?

Error: The source type is 'bigint'.

  13 |   expect(returnsVoid()).type.not.toBeBigInt();
  14 | 
> 15 |   expect(returnsBigInt()).type.not.toBeBigInt();
     |                                    ^
  16 | });
  17 | 

       at ./__typetests__/toBeBigInt.tst.ts:15:36 ❭ is NOT bigint?

"
`;

exports[`toBeBigInt: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeBigInt.tst.ts
  × is bigint?
  × is NOT bigint?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
